# pypoll

./: .gitignore  dashboard.py  dashboard2.py  pypoll.ipynb  pyproject.toml
pypoll/: components.py  data.py
