[tool.poetry]
name = "pypoll"
version = "0.1.0"
description = ""
authors = ["Nico Kreiling <nico.kreiling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
panel = "^0.13.0"
streamlit = "^1.8.1"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
